# CRcpp

./: .gitignore  .gitmodules  CMakeLists.txt  FindR.cmake  LICENSE
Mypack/: CMakeLists.txt  DESCRIPTION  NAMESPACE
Mypack/R/: RcppExports.R  ShowComplexGamma.R~  complexgamma.R  complexgamma.R~
Mypack/man/: Rpack-package.Rd  cgamma.Rd  cgammacpp.Rd  cpptoolchain.Rd  showgamma.Rd
Mypack/src/: RcppExports.cpp  complexgamma.cpp
RInside/src/: RInsideAutoloads.h  RInsideEnvVars.h
Rcpp/.github/workflows/: macos.yaml
Rcpp/docker/ci-dev/: Dockerfile
Rcpp/inst/include/Rcpp/: Language.h
Rpack/: CMakeLists.txt  DESCRIPTION  NAMESPACE
Rpack/R/: RcppExports.R
Rpack/src/: RcppExports.cpp  rcpp_hello_world.cpp
etc/cmake/RInside/: CMakeLists.txt  CRcppBuildRInside.cpp
etc/cmake/Rcpp/: CMakeLists.txt  CRcppBuildRcpp.cpp
etc/msvc/: RInside.cpp  RInsideCommon.h  date.cpp
etc/msvc/getrvamap/: getrvamap.py
patch/: README.txt  RInside.cpp  date.cpp
patch/cmake/RInside/: CMakeLists.txt
patch/cmake/Rcpp/: CMakeLists.txt
patch/msvc/: README.txt  RInsideCommon.h  Rcpp.h  compiler.h
patch/msvc/getrvamap/: getrvamap.hs
scripts/: getrvamap.R  getrvamap.hs  getrvamap.py
src/: repl.cpp
